crates/cockpitctl-domain/tests/snapshots/snapshot_tests__policy_outcome_matrix.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: results
---
[
    (
        "blocking_fail",
        Blocked,
    ),
    (
        "blocking_warn",
        Allowed,
    ),
    (
        "blocking_pass",
        Allowed,
    ),
    (
        "nonblocking_fail",
        Informational,
    ),
]
