crates/cockpitctl-domain/tests/snapshots/snapshot_tests__policy_outcome_nonblocking_matrix.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: results
---
[
    (
        "nonblocking_pass",
        Informational,
    ),
    (
        "nonblocking_warn",
        Informational,
    ),
    (
        "nonblocking_skip",
        Informational,
    ),
    (
        "blocking_skip",
        Allowed,
    ),
]
