crates/cockpitctl-domain/tests/snapshots/snapshot_tests__summarize_report_no_truncation_summary.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: summary
---
{
  "id": "lint",
  "blocking": false,
  "missing": "skip",
  "presence": "present",
  "report_path": "artifacts/lint/report.json",
  "verdict": {
    "status": "warn",
    "counts": {
      "info": 1,
      "warn": 1,
      "error": 0
    },
    "reasons": []
  },
  "truncated": false,
  "errors": [],
  "policy_outcome": "informational"
}
