crates/cockpitctl-domain/tests/snapshots/snapshot_tests__summarize_report_truncated_summary.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: summary
---
{
  "id": "builddiag",
  "blocking": true,
  "missing": "fail",
  "presence": "present",
  "report_path": "artifacts/builddiag/report.json",
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 0,
      "warn": 1,
      "error": 2
    },
    "reasons": [
      "receipt_inconsistent"
    ]
  },
  "truncated": true,
  "errors": [],
  "policy_outcome": "blocked"
}
